syntax = "proto3";

package api.houyi.strategy;

import "google/api/annotations.proto";
import "buf/validate/validate.proto";
import "strategy.proto";

option go_package = "github.com/aide-family/moon/api/houyi/strategy;strategy";
option java_multiple_files = true;
option java_package = "api.houyi.strategy";

// 告警策略下发通道
service Strategy {
	rpc PushStrategy(PushStrategyRequest) returns (PushStrategyReply) {
		option (google.api.http) = {
			post: "/v1/strategy/push"
			body: "*"
		};
	}
}

message PushStrategyRequest {
	repeated Strategy strategies = 1 [(buf.validate.field).cel = {
		id: "PushStrategyRequest_strategies",
		expression: "this.size() > 0"
		message: "策略列表不能为空"
	}];
}
message PushStrategyReply {}
